--- a/css/index.css
+++ b/css/index.css
@@ -126,3 +126,64 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 62.5%;
+}
+html,
+body {
+  font-family: 'Dokdo', cursive;
+}
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'Dokdo', cursive;
+}
+h1 {
+  font-size: 4rem;
+}
+h2 {
+  font-size: 3.2rem;
+  padding-bottom: 10px;
+}
+h4 {
+  font-size: 2.5rem;
+  padding-bottom: 10px;
+}
+p {
+  line-height: 1.5;
+  font-size: 1.6rem;
+  padding-bottom: 10px;
+}
+img {
+  max-width: 100%;
+  height: auto;
+}
+.container-nav {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+}
+.container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+  background-color: gainsboro;
+}
+.main-content {
+  display: flex;
+  justify-content: center;
+  margin-top: 40%;
+}
+.main-content .btn {
+  width: 250px;
+  color: white;
+  background-color: darkslategray;
+  padding: 25px;
+  text-align: center;
+  border-radius: 5px;
+}
